[package]
name = "myepicproject"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "myepicproject"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"

# workaround tutorial
getrandom = { version = "0.2.2", features = ["custom"] }
anchor-spl = "0.27.0"
solana-program = "=1.14.17"
winnow="=0.4.1"
toml_datetime="=0.6.1"

[scripts]
test = "node tests/myepicproject.js"